{
    "name": "MyInput",
    "maps": [
        {
            "name": "Map",
            "id": "722c59eb-d2f6-414b-b5c3-81d0e74a34f0",
            "actions": [
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "b06fa70a-27a6-4af5-a3b7-49802e8e1979",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "b03dac5f-c20c-487d-ac4f-ae997b30525c",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Reset",
                    "type": "Button",
                    "id": "24f23d6f-da1a-4faf-a6f0-3493ca44b828",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold(duration=7,pressPoint=1)",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "6ab6df9c-3db1-413e-8438-12d14b10cc6d",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "50a6bb0c-59f1-4c2c-b6a4-0e2575002025",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "2a2bd173-a71c-4b7e-aa0c-2e07f4dc0b9c",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "04e8c60d-bcf9-4185-af12-0bfdd9296e7e",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "a2dfd5b7-8c23-48a4-a4d1-a0a4a2a6072a",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "aee3dfd2-c829-48ca-b29b-7847acd1a479",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "291a36eb-f2d0-46e2-819f-85dbdb404acf",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "bccb0bcb-8c1d-49b6-a57a-b3bf0776e43c",
                    "path": "<Gamepad>/select",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Reset",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9a0683c9-6374-462b-abd6-e35cfc1f40a3",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Reset",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Camera",
            "id": "db2aa0dc-f618-4b01-8da6-5c9fed33bfbb",
            "actions": [
                {
                    "name": "LookRate",
                    "type": "Value",
                    "id": "66fff732-7f19-4848-a593-333dfa55a9cf",
                    "expectedControlType": "Vector2",
                    "processors": "StickDeadzone",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "LookRate1",
                    "type": "Value",
                    "id": "47b749db-711b-4142-be3d-2b9ba662201c",
                    "expectedControlType": "Vector2",
                    "processors": "StickDeadzone",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "LookDelta",
                    "type": "Value",
                    "id": "2623c196-b4bb-4226-88bb-720924e32445",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "112fec69-0098-4883-a0e8-28e11701fcd8",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LookRate",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "885bf22d-186b-468e-afdc-5ca664caabc9",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LookDelta",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "80c9ca70-c0c1-446c-9b2c-ab3a9777bc91",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LookRate1",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}